--- a/src/App.css
+++ b/src/App.css
@@ -35,7 +35,7 @@ a:visited {
 }
 
 .title-row {
-  padding-bottom: 75px
+  padding-bottom: 25px
 }
 
 
@@ -49,30 +49,36 @@ a:visited {
 }
 
 
-.panel {
-  /* border: 1px solid;
-  height: 230px;
-  width: 240px;
-  padding: 10px; */
+.box {
+  margin-top: 25px;
+  border: 1px solid;
+  border-radius: 10px;
+  padding: 50px;
 }
+
+.sidebar-box {
+  max-height: 950px;
+  margin-top: 25px;
+  border: 1px solid;
+  border-radius: 10px;
+  padding: 50px;
+}
+
 
 
 .summary {
-  padding-bottom: 100px;
+  
 }
 
 .details {
-  padding-bottom: 100px;
+  
 }
 
 .table {
   padding-bottom: 100px
 }
 
-.table-responsive{
-  max-height: 50%;
-  overflow: auto;
-}
+
 
 .summary .title-name{
 font-size: calc(10px + 2vmin);
@@ -105,12 +111,6 @@ font-size: calc(10px + 2vmin);
 }
 
 
-.details{
-
-  margin-top: 50px;
-
-}
-
 .details .date-row {
 
   margin-bottom: 50px;
@@ -136,6 +136,11 @@ font-size: calc(10px + 2vmin);
 
 .posts:hover {
   border: 1px white solid;
+}
+
+.post-title{
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 @media only screen and (max-width: 570px) {
